<resources>
    <string name="add_task">+ Add Task</string>
    <string name="go_back_label">Go Back</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_label_empty">Label cannot be empty</string>
    <string name="delete_group_title">Are you sure you want to delete this group?\nThis action cannot be undone.</string>
    <string name="delete_group">Delete group</string>
    <string name="dialog_add_group_title">Add new group</string>
    <string name="dialog_group_name_hint">Group name</string>
    <string name="dialog_edit_group_title">Edit Group</string>
    <string name="dialog_create_group">Create</string>
    <string name="dialog_save_group">Save</string>
    <string name="dialog_delete_group">Delete Group</string>
    <string name="dialog_edit_task_title">Edit task</string>
    <string name="dialog_add_task_title">Add new task</string>
    <string name="dialog_task_label_hint">Label</string>
    <string name="dialog_task_new_hint">New Task</string>
    <string name="dialog_task_duration_label">Duration (seconds)</string>
    <string name="dialog_create_task">Create Task</string>
    <string name="dialog_update_task">Update task</string>
    <string name="dialog_delete_task">Delete task</string>
    <string name="dialog_delete_task_confirm">Are you sure you want to delete this task?</string>
    <string name="home_greeting">Kaixo!</string>
    <string name="home_done">Done!</string>
    <string name="home_timer_zero">00:00</string>
    <string name="home_next_placeholder">---</string>
    <string name="home_next_task_prefix">Next: %1$s</string>
    <string name="add_group">+ Add Group</string>
    <string name="switch_to_edit_mode">Switch to Edit Mode</string>
    <string name="switch_to_work_mode">Switch to Work Mode</string>
    <string name="stopwatch_start">Start stopwatch</string>
    <string name="stopwatch_pause">Pause stopwatch</string>
    <string name="stopwatch_reset">Reset Stopwatch</string>
    <string name="stopwatch_counter_default">0</string>
    <string name="timer_save">Save timer</string>
    <string name="timer_start">Start timer</string>
    <string name="timer_pause">Pause timer</string>
    <string name="timer_reset">Reset timer</string>
    <string name="timer_switch_edit">Switch to Edit Mode</string>
    <string name="timer_switch_work">Switch to work mode</string>
    <string name="timer_default">00:00:00</string>
    <string name="screen_stay_awake">Screen will stay awake</string>
    <string name="screen_can_turn_off">Screen can turn off</string>
    <string name="cd_lock_icon">Lock screen</string>
    <string name="cd_home_nav">Home</string>
    <string name="cd_stopwatch_nav">Stopwatch</string>
    <string name="cd_timer_nav">Timer</string>
    <string name="cd_about_nav">About</string>
    <string name="cd_play_pause">Play or pause</string>
    <string name="cd_repeat_task">Repeat task</string>
    <string name="cd_increase_duration">Add 30 seconds</string>
    <string name="cd_skip_task">Skip task</string>
    <string name="cd_reset_group">Reset group</string>
    <string name="cd_start_group">Start group</string>
    <string name="cd_edit_session">Edit group</string>
    <string name="cd_add_task">Add task</string>
    <string name="cd_edit_task">Edit task</string>
    <string name="cd_ascend">Move up</string>
    <string name="cd_descend">Move down</string>
    <string name="cd_app_icon">App icon</string>
    <string name="activity_settings_label">Settings</string>
    <string name="activity_about_label">About</string>
    <string name="activity_lock_label">Lock</string>
    <string name="h1_color_picker">Pick a Color</string>
    <string name="h1_delete_group">Are you sure you want to delete this group?</string>
    <string name="h1_select_group">Select Group</string>
    <string name="h1_rename_app">Rename app</string>
    <string name="h2_contributors">Contributors</string>
    <string name="h2_icons">Icons</string>
    <string name="h2_fonts">Fonts</string>
    <string name="h2_themes">Themes</string>
    <string name="h2_apps">Applications</string>
    <string name="h2_clock">Clock</string>
    <string name="h2_search">Search</string>
    <string name="h2_battery">Battery</string>
    <string name="h2_date">Date</string>
    <string name="h2_data">Data</string>
    <string name="h2_temperature">Temperature</string>
    <string name="h2_groups">Groups</string>
    <string name="h2_language">Language</string>
    <string name="h2_security">Security</string>
    <string name="h2_system">System</string>
    <string name="h2_background">Background</string>
    <string name="h2_app">App</string>
    <string name="disclaimer_delete_group">Your apps will go to the following group.</string>
    <string name="disclaimer_pick_clock_app">Selecting an app here will set it as your default clock action. When you tap the clock on your home screen, this app will be launched.</string>
    <string name="disclaimer_pick_icon_pack">Choose an installed icon pack. If an icon is missing, Mako will use the system icon for that app.</string>
    <string name="btn_unlock">Unlock</string>
    <string name="btn_go_back">Go Back</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_about_txori">About Txori</string>
    <string name="btn_lock">Lock</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete_group">Delete group</string>
    <string name="btn_join_discord">Join Discord</string>
    <string name="btn_export_data">Export Data</string>
    <string name="btn_clear_data">Clear Data</string>
    <string name="btn_theme_apply_custom">Apply Custom Theme</string>
    <string name="btn_set_default">Set Launcher as default</string>
    <string name="btn_set_clock_app">Change Clock Tap Action</string>
    <string name="btn_refresh_launcher">Refresh launcher</string>
    <string name="btn_change_wallpaper">Change OS wallpaper</string>
    <string name="btn_edit_apps">Manage Installed Apps</string>
    <string name="btn_add_group">+ Add New Group</string>
    <string name="btn_select_icon_pack">Choose icon pack</string>
    <string name="btn_font_custom_pick">Choose Font file</string>
    <string name="colorpicker_theme_foreground">Foreground</string>
    <string name="colorpicker_theme_collapsible_header">Collapsible Header</string>
    <string name="colorpicker_theme_h1">H1</string>
    <string name="colorpicker_theme_icons">Icons</string>
    <string name="colorpicker_theme_accent">Accent</string>
    <string name="colorpicker_theme_background_1">Background 1</string>
    <string name="colorpicker_theme_background_2">Background 2</string>
    <string name="colorpicker_theme_background_3">Background 3</string>
    <string name="colorpicker_theme_input_background">Input Background</string>
    <string name="colorpicker_theme_button_1_background">Button 1 Background</string>
    <string name="colorpicker_theme_button_1_background_selected">Button 1 Selected Background</string>
    <string name="colorpicker_theme_button_2_background">Button 2 Background</string>
    <string name="colorpicker_theme_danger">Danger</string>
    <string name="colorpicker_theme_disabled">Disabled</string>
    <string name="colorpicker_theme_task_frequency">Task Frequency</string>
    <string name="colorpicker_theme_progressbar">Progress Bar</string>
    <string name="filepicker_selected_icon_pack">Selected pack: %1$s</string>
    <string name="filepicker_icon_pack_not_selected">No icon pack selected</string>
    <string name="filepicker_font_custom_none">No font selected</string>
    <string name="radio_default">Default</string>
    <string name="radio_default_system">Default (System)</string>
    <string name="radio_none">None</string>
    <string name="radio_language_system_default">System Default (fallback to English)</string>
    <string name="radio_language_english" translatable="false">English</string>
    <string name="radio_language_german" translatable="false">Deutsch</string>
    <string name="radio_language_turkish" translatable="false">Türkçe</string>
    <string name="radio_icons_monochrome">Monochrome</string>
    <string name="radio_custom_icon_pack">Custom icon pack</string>
    <string name="radio_clock_none">Hide clock</string>
    <string name="radio_clock_24">24-hour</string>
    <string name="radio_clock_12">12-hour (AM/PM)</string>
    <string name="radio_celsius">Celsius</string>
    <string name="radio_fahrenheit">Fahrenheit</string>
    <string name="radio_font_custom">Custom font</string>
    <string name="radio_background_wallpaper">Show Wallpaper on Home Screen</string>
    <string name="radio_theme_rama">Rama</string>
    <string name="radio_theme_custom">Custom</string>
    <string name="checkbox_lock_settings">Lock Settings</string>
    <string name="checkbox_show_profile_indicator">Show profile indicator</string>
    <string name="checkbox_show_battery_temperature">Show battery temperature</string>
    <string name="checkbox_show_battery_charge_status">Show battery charge status</string>
    <string name="checkbox_show_ungrouped_apps">Show ungrouped apps</string>
    <string name="checkbox_has_collapsible_groups">Allow collapsing groups</string>
    <string name="checkbox_show_search">Show search bar</string>
    <string name="app_name" translatable="false">Txori</string>
    <string name="app_creator" translatable="false">Pombo</string>
    <string name="app_desc">A lightweight, distraction-free Android launcher that’s privacy-first and entirely on-device, designed for focus and simplicity.</string>
    <string name="app_background_tasks_desc">No Background Tasks</string>
    <string name="app_ads_desc">No Ads</string>
    <string name="app_trackers_desc">No Trackers</string>
    <string name="app_offline_desc">Works Offline</string>
    <string name="product_hackernoon_creator" translatable="false">HackerNoon</string>
    <string name="product_hackernoon_name" translatable="false">Pixel Icon Library</string>
    <string name="product_hackernoon_url" translatable="false">github.com/hackernoon/pixel-icon-library</string>
    <string name="product_jersey_creator" translatable="false">Sarah Cadigan-Fried</string>
    <string name="product_jersey_name" translatable="false">Jersey 25</string>
    <string name="product_jersey_url" translatable="false">github.com/scfried/soft-type-jersey</string>
    <string name="product_dracula_creator" translatable="false">Zeno Rocha</string>
    <string name="product_dracula_name" translatable="false">Dracula</string>
    <string name="product_dracula_url" translatable="false">github.com/dracula</string>
    <string name="product_catppuccin_creator" translatable="false">Pocco</string>
    <string name="product_catppuccin_name" translatable="false">Catppuccin Moccha</string>
    <string name="product_catppuccin_url" translatable="false">github.com/catppuccin</string>
    <string name="product_tokyo_creator" translatable="false">Enkia</string>
    <string name="product_tokyo_name" translatable="false">Tokyo Night</string>
    <string name="product_tokyo_url" translatable="false">github.com/enkia/tokyo-night-vscode-theme</string>
    <string name="product_melange_creator" translatable="false">Savq</string>
    <string name="product_melange_name" translatable="false">Mélange Dark</string>
    <string name="product_melange_url" translatable="false">github.com/savq/melange-nvim</string>
    <string name="license_gpl3" translatable="false">GPL 3.0 or Later</string>
    <string name="license_ofl_1_1" translatable="false">OFL 1.1</string>
    <string name="license_cc_4" translatable="false">CC 4.0</string>
    <string name="license_mit" translatable="false">MIT</string>
    <string name="hint_timer">HHMMSS</string>
</resources>