<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:padding="16sp"
    android:background="@color/bg_1"
    android:focusableInTouchMode="true"
    style="@style/VerticalListDivided">

    <TextView
        android:id="@+id/modal_title"
        android:text="@string/dialog_edit_task_title"
        style="@style/H2_center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/foreground"
        android:text="@string/dialog_task_label_hint" />

    <EditText
        android:id="@+id/label"
        android:hint="@string/dialog_task_new_hint"
        style="@style/EditText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/foreground"
        android:text="@string/dialog_task_duration_label" />

    <EditText
        android:id="@+id/duration"
        style="@style/EditText" />

    <Button
        android:id="@+id/delete_button"
        android:text="@string/dialog_delete_task"
        style="@style/BTN_danger" />

    <Button
        android:id="@+id/add_button"
        android:text="@string/dialog_update_task"
        style="@style/BTN2" />

    <Button
        android:id="@+id/cancel_button"
        android:text="@string/cancel"
        style="@style/BTN1" />
</LinearLayout>
