<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    style="@style/VerticalListDivided">

    <Button
        android:id="@+id/timer_button"
        android:layout_weight="1"
        android:hint="@string/timer_default"
        android:background="@android:color/transparent"
        style="@style/H1_center" />

    <FrameLayout
        android:id="@+id/edit_view"
        android:visibility="gone"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/VerticalList">

        <EditText
            android:id="@+id/timer_input"
            android:layout_height="match_parent"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="6"
            android:background="@android:color/transparent"
            android:hint="@string/hint_timer"
            android:cursorVisible="false"
            style="@style/H1_center" />
    </FrameLayout>

    <LinearLayout style="@style/VerticalListDivided">

        <Button
            android:id="@+id/add_timer"
            android:text="@string/timer_save"
            android:visibility="gone"
            style="@style/BTN2" />

        <Button
            android:id="@+id/start_timer"
            android:text="@string/timer_start"
            style="@style/BTN2" />

        <Button
            android:id="@+id/reset_timer"
            android:text="@string/timer_reset"
            style="@style/BTN2" />

        <Button
            android:id="@+id/edit_mode"
            android:text="@string/timer_switch_edit"
            style="@style/BTN2" />

    </LinearLayout>
</LinearLayout>
