<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_1">

    <LinearLayout
        android:id="@+id/time_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32sp"
        android:paddingBottom="32sp"
        android:gravity="center"
        android:layout_marginBottom="16sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:textColor="@color/foreground"
            android:text="@string/home_greeting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="72sp"
            android:layout_gravity="center"
            android:textColor="@color/foreground"
            android:id="@+id/current_task_timer"
            android:text="@string/home_timer_zero" />

        <TextView
            android:id="@+id/next_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_marginBottom="8sp"
            android:layout_gravity="center"
            android:textColor="@color/disabled"
            android:text="@string/home_next_placeholder" />

        <LinearLayout
            android:id="@+id/controllers"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <FrameLayout
                android:id="@+id/repeat_task"
                android:background="@color/bg_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8sp"
                android:padding="12sp"
                android:contentDescription="@string/cd_repeat_task">

                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/icon_refresh"
                    android:contentDescription="@string/cd_repeat_task" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/increase_duration"
                android:background="@color/bg_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8sp"
                android:padding="12sp"
                android:contentDescription="@string/cd_increase_duration">

                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/icon_30_timer"
                    android:contentDescription="@string/cd_increase_duration" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/start_task"
                android:background="@color/bg_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8sp"
                android:padding="12sp"
                android:contentDescription="@string/cd_play_pause">

                <ImageView
                    android:id="@+id/play_pause_icon"
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/icon_play"
                    android:contentDescription="@string/cd_play_pause" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/skip_task"
                android:background="@color/bg_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12sp"
                android:contentDescription="@string/cd_skip_task">

                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/icon_next"
                    android:contentDescription="@string/cd_skip_task" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/task_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8sp"
        android:layout_marginBottom="8sp"
        android:layout_weight="1" />

    <com.rama.txori.widgets.WdButton
        android:id="@+id/add_group_button"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:background="@color/button_2"
        android:text="@string/add_group" />

    <com.rama.txori.widgets.WdButton
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:background="@color/button_2"
        android:text="@string/switch_to_edit_mode" />

    <com.rama.txori.widgets.WdButton
        android:id="@+id/work_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:visibility="gone"
        android:background="@color/button_2"
        android:text="@string/switch_to_work_mode" />

</LinearLayout>
